# KGATE

./: .gitignore  CONTRIBUTING.md  README.md  config_template.toml  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
configs/examples/: lp_default_transe.toml  lp_gat_transe.toml  lp_gcn_distmult.toml  tc_default_transe.toml  tc_gat_transe.toml  tc_gcn_distmult.toml
configs/test_e2e/: lp_default_transe.toml  lp_gat_transe.toml  lp_gcn_distmult.toml  tc_default_transe.toml  tc_gat_transe.toml  tc_gcn_distmult.toml
docs/: architect.md  conf.py  data_leakage.md  decoders.md  encoders.md  evaluators.md  grid_search.md  index.md  index.rst  inference.md  knowledge_graph.md  preprocessing.md  preprocessing_workflow.md  preprocessors.md  quickstart.md  samplers.md  utils.md
docs/.github/: pull_request_template.md
docs/apidocs/: index.rst
docs/decoders/: bilinear.md  convolutional.md  translational.md  translationals.md
docs/reference/: api_architect.md  api_data_leakage.md  api_encoders.md  api_evaluators.md  api_grid_search.md  api_inference.md  api_knowledge_graph.md  api_preprocessing.md  api_samplers.md  api_utils.md  architect.md
scripts/: make_synthetic_test_graph.py
src/: config_template.toml
src/KGATE/: data_structures.py  decoders.py  encoders.py  kgate.py  preprocessing.py  utils.py
src/kgate/: config.py  (+16 more)
tests/: conftest.py  conftests.py  fixtures.py  make_synthetic_test_graph.py  test_decoders.py  test_e2e_pipeline.py  test_kg.py  test_node_class_triple_injection.py  test_synthetic_dataset.py
(+26 files in other folders)
