[project]
name = "KGATE"
version = "0.0.1"
description = "Knowledge Graph Autoencoder Training Environment, bridging PyG encoders and TorchKGE decoders."
requires-python = ">=3.10"

[tool.poetry.dependencies]
python = ">=3.10"
torchkge = "^0.17.7"
torch-geometric = "^2.6.1"
matplotlib = "^3.10.0"
pytorch-ignite = "^0.5.1"
