[project]
name = "KGATE"
version = "0.0.1"
description = "Knowledge Graph Autoencoder Training Environment, bridging PyG encoders and TorchKGE decoders."
requires-python = ">=3.10"

[tool.poetry]
include = [
    { path = "config_template.toml", format = ["sdist","wheel"] }
]

[tool.poetry.dependencies]
python = ">=3.10"
torchkge = "^0.17.7"
torch-geometric = "^2.6.1"
matplotlib = "^3.10.0"
pytorch-ignite = "^0.5.1"
pyyaml = "^6.0.2"
